// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HelpCenterEditModalHeader /> should display the component correctly - with the category selector: with the category selector 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="headerTopContainer"
    >
      <span
        class="titleInput"
      >
        Uncategorized article
      </span>
      <div
        class="headerControls"
      >
        <div
          class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
          data-color="grey"
          data-corner="round"
          data-name="badge"
          data-type="light-grey"
          id="editingState"
        >
          <i
            class="material-icons"
          >
            edit
          </i>
          UNSAVED
        </div>
        <div>
          <div
            class="wrapper"
          >
            <button
              class="trigger"
              data-testid="dropdown-select-trigger"
            >
              <span
                class="label"
              >
                <span>
                  <img
                    alt="fr-FR"
                    class="flag-emoji"
                    src="test-file-stub"
                  />
                  <span>
                    French - France
                  </span>
                </span>
              </span>
              <span
                class="material-icons"
              >
                arrow_drop_down
              </span>
            </button>
          </div>
        </div>
        <button
          aria-disabled="false"
          aria-label="copy url"
          class="ui-button-wrapper-cef1 wrapper ghost medium ui-button-ghost-cef1 ui-button-secondary-cef1"
          id="copy-url-button"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              link
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          aria-label="close edit modal"
          class="ui-button-wrapper-cef1 wrapper ghost medium ui-button-ghost-cef1 ui-button-secondary-cef1"
          id="close-edit-mode-button"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              keyboard_tab
            </i>
          </span>
        </button>
      </div>
    </div>
    <div
      class="break"
    />
    <div
      class="inlineSettings"
    >
      <div
        class="categorySelect"
      >
        <template
          data-react-aria-hidden="true"
        >
          <div
            class="ui-list-list-b1d8 ui-list-high-b1d8 ui-list-issearchable-b1d8"
            data-name="list"
            style="max-width: 266px;"
          >
            <div
              class="ui-searchfield-searchfield-7412"
              data-name="search-field-wrapper"
            >
              <div
                class="ui-searchfield-clearbutton-7412 ui-searchfield-hidden-7412"
                data-testid="search-field-clear-button"
              />
            </div>
          </div>
        </template>
        <div
          class="react-aria-Select"
          data-name="select"
          data-rac=""
        >
          <span
            class="react-aria-SelectValue"
            data-rac=""
            id="react-aria-:r9:"
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="Select article category"
              aria-labelledby="react-aria-:r9: react-aria-:r4:"
              class="ui-selecttrigger-selecttrigger-671d"
              data-name="select-trigger"
              data-rac=""
              data-react-aria-pressable="true"
              id="react-aria-:r4:"
              slot="trigger"
              tabindex="-1"
              type="button"
            >
              <div
                class="ui-textfield-field-b7d8"
                data-name="text-field"
                data-rac=""
              >
                <label
                  class="ui-label-label-3864"
                  data-name="label"
                  for="react-aria-:rc:"
                  id="react-aria-:rd:"
                >
                  <span
                    class="typography-medium-md ui-text-text-d239"
                    data-name="text"
                    style="text-align: left;"
                  >
                    Help Center category
                  </span>
                </label>
                <div
                  class="ui-input-wrapper-8e5a ui-input-md-8e5a ui-input-hastrailingslot-8e5a ui-input-hastrailingicon-8e5a"
                  data-name="input"
                >
                  <label>
                    <input
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-labelledby="react-aria-:rd:"
                      class="ui-input-input-8e5a typography-regular-md"
                      data-rac=""
                      id="react-aria-:rc:"
                      tabindex="0"
                      title=""
                      type="text"
                      value="No category"
                    />
                    <span
                      class="ui-inputslot-slot-0bf5 ui-inputslot-md-0bf5 ui-inputslot-trailing-0bf5 ui-inputslot-icon-0bf5"
                      data-name="input-slot"
                    >
                      <span
                        class="ui-icon-icon-b14f ui-icon-sm-b14f ui-icon-regularicon-b14f"
                        data-name="icon"
                      >
                        <svg
                          aria-label="arrow-chevron-down"
                          role="img"
                        >
                          <use
                            href="#arrow-chevron-down"
                          />
                        </svg>
                      </span>
                    </span>
                  </label>
                </div>
              </div>
            </button>
          </span>
          <div
            aria-hidden="true"
            data-a11y-ignore="aria-hidden-focus"
            data-react-aria-prevent-focus="true"
            data-testid="hidden-select-container"
            style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; width: 1px; white-space: nowrap; top: 0px; left: 0px;"
          >
            <label>
              <select
                tabindex="-1"
                title=""
              >
                <option />
                <option
                  value="no-category"
                >
                  No category
                </option>
                <option
                  value="category-1"
                >
                  Orders
                </option>
                <option
                  value="category-2"
                >
                  Pricing
                </option>
              </select>
            </label>
          </div>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`<HelpCenterEditModalHeader /> should display the component correctly - without the category selector: without the category selector 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="headerTopContainer"
    >
      <span
        class="titleInput"
      >
        Uncategorized article
      </span>
      <div
        class="headerControls"
      >
        <div
          class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
          data-color="grey"
          data-corner="round"
          data-name="badge"
          data-type="light-grey"
          id="editingState"
        >
          <i
            class="material-icons"
          >
            edit
          </i>
          UNSAVED
        </div>
        <div>
          <div
            class="wrapper"
          >
            <button
              class="trigger"
              data-testid="dropdown-select-trigger"
            >
              <span
                class="label"
              >
                <span>
                  <img
                    alt="fr-FR"
                    class="flag-emoji"
                    src="test-file-stub"
                  />
                  <span>
                    French - France
                  </span>
                </span>
              </span>
              <span
                class="material-icons"
              >
                arrow_drop_down
              </span>
            </button>
          </div>
        </div>
        <button
          aria-disabled="false"
          aria-label="copy url"
          class="ui-button-wrapper-cef1 wrapper ghost medium ui-button-ghost-cef1 ui-button-secondary-cef1"
          id="copy-url-button"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              link
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          aria-label="close edit modal"
          class="ui-button-wrapper-cef1 wrapper ghost medium ui-button-ghost-cef1 ui-button-secondary-cef1"
          id="close-edit-mode-button"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              keyboard_tab
            </i>
          </span>
        </button>
      </div>
    </div>
    <div
      class="break"
    />
    <div
      class="inlineSettings"
    />
  </header>
</div>
`;

exports[`<HelpCenterEditModalHeader /> should render an input when onEditTitle is defined 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="headerTopContainer"
    >
      <div
        class="titleContainer"
      >
        <input
          class="titleInput"
          maxlength="250"
          placeholder="Title"
          title="Uncategorized article"
          type="text"
          value="Uncategorized article"
        />
      </div>
      <div
        class="headerControls"
      >
        <div
          class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
          data-color="grey"
          data-corner="round"
          data-name="badge"
          data-type="light-grey"
          id="editingState"
        >
          <i
            class="material-icons"
          >
            edit
          </i>
          UNSAVED
        </div>
        <div>
          <div
            class="wrapper"
          >
            <button
              class="trigger"
              data-testid="dropdown-select-trigger"
            >
              <span
                class="label"
              >
                <span>
                  <img
                    alt="fr-FR"
                    class="flag-emoji"
                    src="test-file-stub"
                  />
                  <span>
                    French - France
                  </span>
                </span>
              </span>
              <span
                class="material-icons"
              >
                arrow_drop_down
              </span>
            </button>
          </div>
        </div>
        <button
          aria-disabled="false"
          aria-label="copy url"
          class="ui-button-wrapper-cef1 wrapper ghost medium ui-button-ghost-cef1 ui-button-secondary-cef1"
          id="copy-url-button"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              link
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          aria-label="close edit modal"
          class="ui-button-wrapper-cef1 wrapper ghost medium ui-button-ghost-cef1 ui-button-secondary-cef1"
          id="close-edit-mode-button"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              keyboard_tab
            </i>
          </span>
        </button>
      </div>
    </div>
    <div
      class="break"
    />
    <div
      class="inlineSettings"
    />
  </header>
</div>
`;
